# rpg_information_field

./: .clang-format  .gitattributes  .gitignore  LICENSE  LICENSE.txt  README.md  dependencies.yaml  isaac_setup.md
act_map/: CMakeLists.txt  README.md  advanced.md  design_and_concepts.md  package.xml  visibility_approximations.md
act_map/cfg/: dm_warehouse_test.txt
act_map/exp/: exp_approx_decomp.cpp  exp_build_depth_map.cpp  exp_comp_optim_orient.cpp  exp_compare_diff_maps.cpp  exp_complexity.cpp  exp_invariant_info.cpp  exp_optim_orient.cpp  exp_pipeline.cpp  exp_pose_gradient.cpp
act_map/include/act_map/: act_map.h  collision_check.h  common.h  conversion.h  depth_map.h  depth_voxel.h  functions.h  gp_vis_approximator.h  info_calculator.h  info_kernels.h  info_utils.h  information_potential.h  interpolation.h  kernel_layer_integrator.h  kernel_ops.h  kernel_voxel_ops.h  kernel_voxels.h  layer_evaluator.h  optim_orient.h  sampler.h  (+18 more)
act_map/maps/: square_1x1_points_w.txt
act_map/notebooks/: .gitignore  add_path.py  eval_gp_fov_approx.ipynb  gp_fit_diff_landmarks.ipynb
act_map/params/: analyze_sim_maps_config.yaml  sim_gp_list.txt
act_map/scripts/: .gitignore  conversion.py  exp_comp_optim_orient.py  exp_compare_diff_maps.py  exp_optim_orient.py  exp_pipeline.py  exp_pose_gradient.py  exp_utils.py  fov_approx_cos.py  fov_approx_gp.py  plot_utils.py  sampler.py  visibility.py
act_map/src/: act_map.cpp  blocks_serialization.cpp  collision_check.cpp  common.cpp  conversion.cpp  depth_map.cpp  depth_voxel.cpp  functions.cpp  gp_vis_approximator.cpp  info_calculator.cpp  info_kernels.cpp  info_utils.cpp  information_potential.cpp  kernel_blocks_serialization.cpp  kernel_layer_integrator.cpp  optim_orient.cpp  pos_factor_layer_evaluator.cpp  positional_factor_layer_integrator.cpp  positional_factor_voxel.cpp  quad_info_factors.cpp  quad_trace_factors.cpp  quadratic_factor_voxel.cpp  quadratic_vis_score.cpp  sampler.cpp  simulator.cpp  trace_kernels.cpp  vis_score.cpp  visibility_checker.cpp  voxblox_utils.cpp
act_map/tests/: test_act_map.cpp  test_depth_map.cpp  test_depth_voxel.cpp  test_gp_factor_voxel.cpp  test_gp_visibility.cpp  test_info_calculator.cpp  test_info_kernels.cpp  test_information_potential.cpp  test_interpolation.cpp  test_kernel_layer_evaluator.cpp  test_kernel_layer_integrator.cpp  test_misc.cpp  test_pos_factor_layer_evaluator.cpp  test_pos_factor_layer_integrator.cpp  test_pos_factor_vox_ops.cpp  test_pos_factor_voxel_serialization.cpp  test_protobuf.cpp  test_quad_info_factor.cpp  test_quad_trace_factor.cpp  test_quadpoly_factor_voxel.cpp  test_quadpoly_visibility.cpp  test_simulator.cpp  test_trace_kernels.cpp  test_vis_score.cpp  test_visibility_checker.cpp  test_voxblox.cpp
act_map/trace/: .gitignore
act_map_exp/: CMakeLists.txt  README.md  batch_experiments.md  evaluation_localization_accuracy.md  mapping_with_UE.md  package.xml  run_a_single_exp.md
act_map_exp/exp_data/: .gitignore  download.sh
act_map_exp/launch/: planner_base.launch  quad_rrt_warehouse_gp.launch  quad_rrt_warehouse_quadratic.launch  quad_traj_opt_warehouse_gp.launch  quad_traj_opt_warehouse_quadratic.launch
act_map_exp/rviz_cfgs/: quad_opt_warehouse.rviz  quad_rrt_warehouse.rviz
act_map_exp/scripts/: analyze_pose_errors.py  analyze_rrt.py  analyze_traj_opt.py  ask_for_esdf.sh  ask_servers_to_publish_maps.sh  build_information_field_batch.py  plot_2d_topview.py  plot_rrt_evolution_2d.py  run_planner_exp.py
act_map_exp/src/: exp_utils.cpp  planner_base.cpp  planner_base_node.cpp  poly_traj_helper.cpp  potential_cost.cpp  quad_rrt.cpp  quad_rrt_node.cpp  quad_traj_opt.cpp  quad_traj_opt_node.cpp  viz_utils.cpp
act_map_exp/srv/: PlanConfig.srv
act_map_exp/tests/: test_exp_utils.cpp  test_poly_traj_helper.cpp  test_potential_cost.cpp
act_map_msgs/: CMakeLists.txt  README.md  package.xml
act_map_msgs/msg/: Layer.msg
act_map_ros/: CMakeLists.txt  README.md  package.xml  virtual_sensor_and_depth_map.md
act_map_ros/cfgs/: depth_map.rviz  full_exp.rviz  full_exp_mesh.rviz  sim.rviz  ue_provider.rviz  warehouse.rviz
act_map_ros/launch/: depth_map_vis.launch  gp_info_map_full_euroc.launch  gp_trace_map_full_euroc.launch  gp_trace_map_full_mfov.launch  gp_trace_map_warehouse.launch  info_map_full_euroc.launch  info_map_server_svo.launch  run_simulation.launch  trace_map_full_euroc.launch  trace_map_full_mfov.launch  trace_map_live.launch  trace_map_server_svo.launch  trace_map_visensor_bag.launch  ue_provider_node.launch  voxblox_warehouse.launch
act_map_ros/params/: act_map_euroc.yaml  act_map_live.yaml  act_map_mfov_urban.yaml  act_map_param.yaml  act_map_sim.yaml  act_map_warehouse.yaml  mfov_mono.yaml  voxblox_warehouse_extrinsics.yaml  voxblox_warehouse_scale.yaml
act_map_ros/scripts/: generate_mesh_and_pc.sh  save_maps.sh
act_map_ros/src/: act_map_server.cpp  common_ros.cpp  conversion_ros.cpp  depth_map_server.cpp  depth_map_server_node.cpp  gp_info_map_server_node.cpp  gp_trace_map_server_node.cpp  info_map_server_node.cpp  params_reader.cpp  quadpoly_info_map_server_node.cpp  quadpoly_trace_map_server_node.cpp  simulator_server.cpp  simulator_server_node.cpp  trace_map_server_node.cpp  ue_provider.cpp  ue_provider_node.cpp
act_map_ros/test_data/: Tbc0.txt  cam_geo0.txt  seg_walls_points_w.txt  tangent_2m.csv  two_walls_points_w.txt  ycorridor_6x20.csv  ycorridor_6x20_points_w.txt
rpg_common_ros/: CMakeLists.txt
rpg_common_ros/src/: publish.cpp  tf.cpp
rpg_vi_utils/: CMakeLists.txt  package.xml
rpg_vi_utils/scripts/: bag_to_pose_file.py
rpg_vi_utils/src/: cam_min.cpp  common_utils.cpp  map.cpp  states.cpp  vi_jacobians.cpp  vi_measurements.cpp
unrealcv_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
unrealcv_bridge/scripts/: add_path.py  record_pose_ue.py  render_from_poses.py
unrealcv_bridge/src/: ue_utils.cpp  unrealcv_client.cpp  unrealcv_render.cpp
unrealcv_bridge/test_data/: poses_xyzpyr_ue_warehouse.txt
unrealcv_bridge/tests/: test_pose_conversion.cpp  test_unrealcv_client.cpp  test_unrealcv_render.cpp
(+203 files in other folders)
