<?xml version="1.0"?>
<package format="2">
  <name>act_map</name>
  <version>0.0.0</version>
  <description>The act_map package</description>

  <maintainer email="zhangzichao17@gmail.com">zichao</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin_simple</depend>

  <depend>rpg_vi_utils</depend>

  <export>

  </export>
</package>
