<?xml version="1.0"?>
<package format="2">
  <name>act_map_exp</name>
  <version>0.0.0</version>
  <description>The act_map_exp package</description>

  <maintainer email="zhangzichao17@gmail.com">zichao</maintainer>

  <license>Private</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin_simple</depend>

  <depend>act_map_ros</depend>
  <depend>voxblox_ros</depend>
  <depend>Ceres</depend>
  <depend>yaml-cpp</depend>

  <depend>mav_trajectory_generation</depend>
  <depend>ompl</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>

  </export>
</package>
