<?xml version="1.0"?>
<package format="2">
  <name>act_map_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for ActMap, copied from Voxblox.</description>

  <author email="zhangzichao17@gmail.com">Zichao Zhang</author>
  <maintainer email="zhangzichao17@gmail.com">Zichao Zhang</maintainer>


  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
