<?xml version="1.0"?>
<package format="2">
  <name>act_map_ros</name>
  <version>0.0.0</version>
  <description>The act_map_ros package</description>

  <maintainer email="zhangzichao17@gmail.com">zichao</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rpg_common_ros</depend>
  <depend>act_map</depend>
  <depend>act_map_msgs</depend>

  <export>

  </export>
</package>
